--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 
   <div id="menu">
     <div id="info">
-      <p id="info__text">Info text ide ovde</p></div>
+      <p id="info__text">
+        <span class="infoTextColorSPan">0</span> categories, <br>with
+        <span class="infoTextColorSPan">0</span> checked,<br> last one made
+        <span class="infoTextColorSPan">?</span>
+      </p></div>
       <button id="menu__themeButton"><img id="themeButtonSvg" src="themeIcon.svg" alt="themeSVG"></button>
     <button id="menu__returnButton"><img id="backButtonSvg" src="backIcon.svg" alt="backSVG"></button>
   </div>
