--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div id="category">
     <form id="category__form" autocomplete="off">
-      <textarea placeholder="Write a Category..." type="text" id="category__textarea" name="submitCategoryInput"></textarea>
+      <textarea maxlength="20" placeholder="Write a Category..." type="text" id="category__textarea" name="submitCategoryInput"></textarea>
       <input type="submit" value="+" id="category__submitbutton">
     </form>
   </div>
@@ -22,7 +22,7 @@
 
   <div id="note">
     <form id="note__form" autocomplete="off">
-      <textarea placeholder="Write a Note..." type="text" id="note__textarea" name="submitNoteInput"></textarea>
+      <textarea maxlength="50" placeholder="Write a Note..." type="text" id="note__textarea" name="submitNoteInput"></textarea>
       <input type="submit" value="+" id="note__submitbutton">
     </form>
   </div>
@@ -36,8 +36,8 @@
         <span class="infoTextColorSPan">0</span> checked,<br> last one made
         <span class="infoTextColorSPan">?</span>
       </p></div>
-      <button id="menu__themeButton"><img id="themeButtonSvg" src="themeIcon.svg" alt="themeSVG"></button>
-    <button id="menu__returnButton"><img id="backButtonSvg" src="backIcon.svg" alt="backSVG"></button>
+      <button id="menu__themeButton"><img id="themeButtonSvg" class="svg" src="themeIcon.svg" alt="themeSVG"></button>
+    <button id="menu__returnButton"><img id="backButtonSvg" class="svg" src="backIcon.svg" alt="backSVG"></button>
   </div>
 
   <div id="categoryList">
