sredjen css i delete dugme

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
         <span class="infoTextColorSPan">0</span> checked,<br> last one made
         <span class="infoTextColorSPan">?</span>
       </p></div>
-      <button id="menu__themeButton"><img id="themeButtonSvg" class="svg" src="themeIcon.svg" alt="themeSVG"></button>
-    <button id="menu__returnButton"><img id="backButtonSvg" class="svg" src="backIcon.svg" alt="backSVG"></button>
+      <button id="menu__themeButton"><img id="themeButtonSvg" class="svg" src="icons/themeIcon.svg" alt="themeSVG"></button>
+      <button id="menu__checkedButton"><img id="checkedButtonSvg" class="svg" src="icons/checkedIconSVG.svg" alt="deleteCheckedSVG"></button>
+      <button id="menu__returnButton"><img id="backButtonSvg" class="svg" src="icons/backIcon.svg" alt="backSVG"></button>
   </div>
 
   <div id="categoryList">
     <h3 id="categoryList__title">Categories</h3>
+    <div class="category__container">
+      <h3 class="category__container__placeholder">No categories yet</h3>
+    </div>
   </div>
   <div id="noteList">
     <h3 id="noteList__title">Notes</h3>
