--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>To Do List App</title>
+  <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
   <link href="css.css" rel="stylesheet">
+  <!-- css animate -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
+
+<div id="logoContainer">
+  <img id="logoContainer__svg" class="animated bounceIn" src="graphics/logoIllustration.svg" alt="logo">
+</div>
 
 <div id="container">
 
@@ -18,7 +25,6 @@
       <input type="submit" value="+" id="category__submitbutton">
     </form>
   </div>
-
 
   <div id="note">
     <form id="note__form" autocomplete="off">
@@ -43,10 +49,8 @@
 
   <div id="categoryList">
     <h3 id="categoryList__title">Categories</h3>
-    <div class="category__container">
-      <h3 class="category__container__placeholder">No categories yet</h3>
-    </div>
   </div>
+
   <div id="noteList">
     <h3 id="noteList__title">Notes</h3>
   </div>
