localStorage,local font i animate css i sredjen css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>To Do List App</title>
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+  <!-- fonts and css -->
+  <link href="fonts/stylesheet.css" rel="stylesheet">
   <link href="css.css" rel="stylesheet">
   <!-- css animate -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <link rel="stylesheet" href="animate.css">
 </head>
 <body>
 
