dodat localStorage i sajt, sredjen css

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <h3 id="noteList__title">Notes</h3>
   </div>
 
+  <p id="version">To Do List App ver1.0</p>
+
 </div>
 
 <script type="module" src="index.js"></script>
